# jira-branches

./: Cargo.toml  README.md  build.sh  install.sh
.github/workflows/: release-app.yml  release.yml
src/: app_config.rs  branch.rs  cli.rs  git.rs  jira.rs  main.rs
src/app_config/: autocomplete_template.rs  config_loader.rs  config_wizard.rs  config_wizard_inquire.rs  file_parser.rs  init.rs  token_completer.rs
src/branch/: sanitizer.rs  template.rs
src/cli/: checkout.rs  cli_parser.rs  command_handler.rs  configure.rs  ls.rs
src/git/: checkout.rs  list.rs
src/jira/: auth.rs  client.rs  error.rs  issue.rs  issue_url.rs
