[package]
name = "jira_branches"
version = "0.1.0"
edition = "2021"
authors = ["John Stott"]
description = "Simple CLI tool for using Jira to define git branches"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
http = "0.2.9"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
